--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,20 @@
-body {
+*{
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  /* font-family: Arial, Helvetica, sans-serif; */
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: auto;
+  margin-bottom: 15px; 
+  /* background-color: #90BEDE; 
+  color: #242830; */
 }
 
 code {
@@ -14,6 +23,8 @@ code {
 }
 
 #root {
-  background-color: #222D47;
+  /* background-color: #222D47; */
+  background-color: #90BEDE; 
   color: #242830;
+  height: auto;
 }
