--- a/src/components/reminders/reminders.css
+++ b/src/components/reminders/reminders.css
@@ -1,6 +1,8 @@
 .remindersPanel {
-    width: 19rem;
-    height: 35%;
+    /* width: 19rem;
+    height: 35%; */
+    width: 100%;
+    height: 35%; 
     overflow: scroll;
 }
 
@@ -44,3 +46,13 @@
     right: 5px;
     top: 5px;
 }
+
+/* .reminderItem {
+    height: 30px;
+}
+
+.reminderTitle {
+    font-size: smaller;
+    position: absolute;
+    top: 5px;
+} */
