--- a/src/components/goals/goals.css
+++ b/src/components/goals/goals.css
@@ -1,5 +1,6 @@
 .goalsPanel {
-    width: 43rem;
+    /* width: 43rem; */
+    width: 100%;
     height: auto;
     margin-bottom: 10px; 
     background-color: #CED2DD;
