--- a/src/components/tasks/tasks.css
+++ b/src/components/tasks/tasks.css
@@ -1,6 +1,8 @@
 .tasksPanel {
-    width: 19rem;
-    height: 35%;
+    /* width: 19rem; 
+    height: 35%; */
+    /* width: 100%; */
+    height: 35%; 
 }
 
 .tasksSubtitle {
@@ -26,6 +28,7 @@
 
 .taskInput {
     width: 50%;
+    /* height: 15px; */
     position: absolute;
     bottom: 3px;
 }
@@ -36,7 +39,7 @@
     bottom: 1px;
 }
 
-.reminderItem {
+/* .reminderItem {
     height: 30px;
 }
 
@@ -44,4 +47,4 @@
     font-size: smaller;
     position: absolute;
     top: 5px;
-}
+} */
