--- a/src/components/timer/timer.css
+++ b/src/components/timer/timer.css
@@ -1,9 +1,14 @@
 .timerPanel {
     width: 19rem;
-    height: 30%;
+    height: auto;
     margin-bottom: 20px; 
+    background-color: rgb(97, 113, 159);
 }
 
-.timerSubtitle {
+/* .timerSubtitle {
     padding-bottom: 10px;
+} */
+
+.timerImg {
+    background-color: rgb(97, 113, 159);
 }
