--- a/src/components/efficiency/efficiency.css
+++ b/src/components/efficiency/efficiency.css
@@ -6,6 +6,19 @@
     margin-bottom: 10px; 
 }
 
-.efficiencySubtitle {
-    padding-bottom: 10px;
+/* .efficiencyTitle {
+    background-color: #93929b; 
+} */
+
+/* .efficiencySubtitle {
+    background-color: #616172; 
+    margin-bottom: 50px;
+} */
+
+.efficiencyText{
+    margin: 5px;
+    /* background-color: #3d3c44;  */
+    background-color: #ffffff; 
+    min-height: 125px;
+    padding: 5px;
 }
