--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ code {
 
 #root {
   /* background-color: #222D47; */
-  background-color: #90BEDE; 
+  /* background-color: #90BEDE;  */
   color: #242830;
   /* width: 100%;
   height: auto; */
