--- a/src/components/Main/style.css
+++ b/src/components/Main/style.css
@@ -4,7 +4,7 @@
     height: auto;
     min-height: 790px;
     /* background-color: rgb(50, 71, 132); */
-    background-color: #BA5C12;
+    background-color: #d36135;
     /* text-align: center; */
     padding: 20px;
     overflow: hidden;
@@ -19,13 +19,13 @@
     /* width: 70%;
     height: auto;
     float: left; */
-    background-color: rgb(72, 110, 223);
+    background-color: #419d78;
 }
 
 .column-2 {
     /* width: 30%;
     float: right; */
-    background-color: rgb(38, 123, 95);
+    background-color: #067bc2;
 }
 
 /* general panel styling that applies to all components */
@@ -35,7 +35,8 @@
 
 .panelBody {
     /* background-color: #CED2DD; */
-    background-color: rgb(210, 216, 233);
+    /* background-color: rgb(210, 216, 233); */
+    background-color: #e59500;
     /* background-color: #DFFDFF; */
 }
 
