removed reactstrap, added custom styling

--- a/src/components/timer/timer.css
+++ b/src/components/timer/timer.css
@@ -4,6 +4,7 @@
     margin-bottom: 20px; 
     /* background-color: rgb(97, 113, 159); */
     background-color: #e59500;
+    padding: 10px 10px 10px 10px;
 }
 
 /* .timerSubtitle {
