--- a/src/components/goals/goals.css
+++ b/src/components/goals/goals.css
@@ -1,14 +1,21 @@
-.goalsPanel {
-    /* width: 43rem; */
-    width: 100%;
-    height: auto;
-    margin-bottom: 10px; 
-    background-color: #CED2DD;
+.goalsBody {
+    background-color: #e59500;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 10px 10px 10px;
 }
 
 .goalsCard {
-    /* max-height: 350px; */
-    width: 33%;
-    float: left;
+    width: 30%;
+    background-color: #CED2DD;
+    margin-bottom: 10px;
+    padding: 5px 10px 5px 10px;
+}
+
+.goalsList {
+    height: 200px;
     overflow: scroll;
+}
+
+.goalsTitle {
 }
