--- a/src/components/taskItem/taskItem.css
+++ b/src/components/taskItem/taskItem.css
@@ -1,15 +1,17 @@
 .taskItem {
-    height: 40px;
+    height: 35px;
+    background-color: #CED2DD;
+    margin: 5px 0 5px 0;
+    padding: 5px 5px 5px 5px;
+    border-radius: 5px;;
 }
 
 .taskTitle {
     font-size: smaller;
     position: absolute;
-    top: 10px;
 }
 
 .removeTaskBtn {
-    position: absolute;
-    top: 5px;
-    right: 5px;
+    float: right;
+    margin-right: 5px;
 }
