--- a/src/components/tasks/tasks.css
+++ b/src/components/tasks/tasks.css
@@ -2,53 +2,46 @@
     /* width: 19rem; 
     height: 35%; */
     /* width: 100%; */
-    height: 35%; 
+    /* height: 35%;  */
 }
 
-.tasksSubtitle {
-    padding-bottom: 10px;
+.tasksBody {
+    padding: 10px 10px 10px 10px;
 }
 
 .taskList {
-    height: 58%;
+    height: 200px;
     overflow: scroll;
 }
 
 .taskItem {
-    
+    margin: 5px 0 5px 0;
+    height: 35px;
+    background-color: #CED2DD;
+    padding: 5px 5px 5px 5px;
+    border-radius: 5px;
 }
 
-.tasksText {
+.taskTitle {
     font-size: smaller;
-    margin-bottom: 45px;
 }
 
-.inputBox {
-    position: absolute;
-    width: 17rem;
-    bottom: 10px;
-    padding-top: 10px;
+.removeTaskBtn {
+    float: right;
+    margin-right: 5px;
+}
+
+.taskForm {
+    padding: 10px 10px 10px 10px;
+    position: relative;
+    bottom: 15px;
 }
 
 .taskInput {
-    width: 50%;
-    /* height: 15px; */
-    position: absolute;
-    bottom: 3px;
+    float: left;
+    width: 75%;
 }
 
-.addTask {
-    position: absolute;
-    right: 5px;
-    bottom: 1px;
+.addTaskBtn {
+    float: right;
 }
-
-/* .reminderItem {
-    height: 30px;
-}
-
-.reminderTitle {
-    font-size: smaller;
-    position: absolute;
-    top: 5px;
-} */
