--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -40,6 +40,7 @@
     /* background-color: #CED2DD; */
     /* background-color: rgb(210, 216, 233); */
     background-color: #e59500;
+    padding: 10px 10px 10px 10px;
     /* background-color: #DFFDFF; */
 }
 
