--- a/src/components/tasks/tasks.css
+++ b/src/components/tasks/tasks.css
@@ -9,28 +9,36 @@
     background-color: #CED2DD;
     padding: 5px 5px 5px 5px;
     border-radius: 5px;
+    overflow: auto;
 }
 
 .taskTitle {
     font-size: smaller;
+    float: left;
 }
 
 .removeTaskBtn {
     float: right;
-    margin-right: 5px;
+    height: 25px;
+    width: 25px;
+    border-radius: 7px;
 }
 
 .taskForm {
-    padding: 10px 10px 10px 10px;
+    height: 30px;
     position: relative;
     bottom: 15px;
 }
 
 .taskInput {
     float: left;
-    width: 75%;
+    height: 25px;
+    width: 80%;
 }
 
 .addTaskBtn {
     float: right;
+    height: 25px;
+    width: 25px;
+    border-radius: 7px;
 }
