--- a/client/src/components/timer/timer.css
+++ b/client/src/components/timer/timer.css
@@ -5,6 +5,6 @@
 
 .timerImg {
     /* background-color: rgb(97, 113, 159); */
-    background-color: #e59500;
+    background-color: #734B5E;
     width: 100%;
 }
