--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,6 +26,7 @@ code {
   /* background-color: #222D47; */
   /* background-color: #90BEDE;  */
   color: #242830;
+  background-color: #357266;
   /* width: 100%;
   height: auto; */
   min-height: 800px;
