--- a/client/src/components/goals/goals.css
+++ b/client/src/components/goals/goals.css
@@ -1,18 +1,27 @@
 .goalsPanel {
     display: flex;
     justify-content: space-between;
+    /* background-color: #BCBDC0; */
+    margin: 15px 0px 15px 0px;
+    /* border-radius: 10px; */
+    /* padding: 15px 15px 15px 15px; */
 }
 
 .goalsCard {
-    width: 31%;
-    background-color: #CED2DD;
-    padding: 5px 10px 5px 10px;
-    border-radius: 5px;
+    width: 32%;
+    background-color: #734B5E;
+    /* padding: 5px 10px 5px 10px; */
+    padding: 15px 15px 15px 15px;
+    border-radius: 10px;
 }
 
 .goalsList {
     height: 200px;
     overflow: scroll;
+}
+
+.goalsForm {
+    margin-top: 10px;
 }
 
 .goalsInput {
@@ -34,6 +43,7 @@
     height: 35px;
     padding: 5px 5px 5px 5px;
     border-radius: 5px;
+    background-color: #BCBDC0;
 }
 
 .goalTitle {
