--- a/client/src/components/reminders/reminders.css
+++ b/client/src/components/reminders/reminders.css
@@ -6,7 +6,7 @@
 .reminderItem {
     margin: 5px 0 5px 0;
     height: 35px;
-    background-color: #CED2DD;
+    background-color: #BCBDC0;
     padding: 5px 5px 5px 5px;
     border-radius: 5px;
 }
