--- a/client/src/components/tasks/tasks.css
+++ b/client/src/components/tasks/tasks.css
@@ -1,59 +1,22 @@
-.taskList {
-    height: 200px;
-    overflow: scroll;
+.tasksTitle {
+    background-color: #BCBDC0;
 }
 
 .taskItem {
-    margin: 5px 0 5px 0;
-    height: 35px;
     background-color: #BCBDC0;
-    padding: 5px 5px 5px 5px;
-    border-radius: 5px;
 }
 
 .taskTitle {
-    font-size: smaller;
-    float: left;
-    position: relative;
-    top: 20%;
+    background-color: #BCBDC0;
 }
 
 .taskDueDate {
     font-size: smaller;
-    float: right;
-    margin-right: 15px;
-}
-
-.removeTaskBtn {
-    float: right;
-    height: 25px;
-    width: 25px;
-    border-radius: 7px;
+    margin-left: 15px;
 }
 
 .taskForm {
-    height: 35px;
-    margin-bottom: 15px;
-    /* padding: 5px 0 10px 0; */
-}
-
-.taskInput {
-    float: left;
-    height: 25px;
-    width: 80%;
-    border-radius: 5px;
-}
-
-.dateInput {
-    float: left;
-    height: 25px;
-    width: 50%;
-    border-radius: 5px;
-}
-
-.addTaskBtn {
-    float: right;
-    height: 25px;
-    width: 25px;
-    border-radius: 7px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
