--- a/client/src/components/Main/main.css
+++ b/client/src/components/Main/main.css
@@ -51,22 +51,21 @@
     margin: 5px 0 5px 0;
     padding: 5px 5px 5px 5px;
     border-radius: 5px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 /* delete button for any mapped over item */
 .panelBoxItemDeleteBtn {
     float: right;
-    height: 25px;
-    width: 25px;
-    border-radius: 7px;
 }
 
 /* main text for any mapped over item */
 .panelBoxTitle {
     font-size: smaller;
     text-align: left;
-    position: relative;
-    top: 20%;
 }
 
 .panelForm {
