tasks into expandable items, conditional rendering of task due date/time

--- a/client/src/components/Main/main.css
+++ b/client/src/components/Main/main.css
@@ -81,3 +81,19 @@
 .panelFormSubmit {
     margin: 5px 5px 5px 5px;
 }
+
+
+/* EXPANDABLE PANEL STYLING */
+
+.expandItem {
+}
+
+.expandHeader {
+    /* display: flex;
+    justify-content: space-between;
+    align-items: center; */
+}
+
+.expandTitle {
+
+}
