--- a/client/src/components/tasks/tasks.css
+++ b/client/src/components/tasks/tasks.css
@@ -37,7 +37,7 @@
     background-color: #BCBDC0;
     padding: 5px 10px 5px 10px;
     margin-top: 10px;
-    /* border-radius: 5px; */
+    border-radius: 5px;
 
     display: block;
 }
