--- a/client/src/components/Main/main.css
+++ b/client/src/components/Main/main.css
@@ -32,10 +32,12 @@
 
 /* boxed in title that appears at the top of a panel */
 .panelTitle {
-    font-weight: bold;
+    /* font-weight: bold;
     font-size: larger;
     padding: 5px 5px 5px 5px;
-    border-radius: 5px;
+    border-radius: 5px; */
+    margin-bottom: 10px;
+    padding: 5px 10px 5px 10px;
 }
 
 /* scrollable lists within panels */
