--- a/client/src/components/tasks/tasks.css
+++ b/client/src/components/tasks/tasks.css
@@ -7,8 +7,8 @@
 }
 
 .tasksTitle {
-    margin-bottom: 10px;
-    padding: 5px 5px 5px 5px;
+    /* margin-bottom: 10px;
+    padding: 5px 5px 5px 5px; */
 }
 
 .taskItem {
