--- a/client/src/components/Main/main.css
+++ b/client/src/components/Main/main.css
@@ -65,6 +65,7 @@
 .panelBoxTitle {
     font-size: smaller;
     text-align: left;
+    padding: 5px 10px 5px 10px;
 }
 
 /* contains all form elements */
