--- a/client/src/components/Main/main.css
+++ b/client/src/components/Main/main.css
@@ -1,7 +1,20 @@
 .contentArea {
     height: auto;
-    padding: 20px;
+    /* width: 100%; */
     overflow: hidden;
+}
+
+.column-1 {
+    width: 70%;
+}
+
+.column-2 {
+    width: 30%;
+}
+
+.headerRow {
+    width: 100%;
+    margin-bottom: 10px;
 }
 
 .logoutBtn {
@@ -10,7 +23,7 @@
     float: right;
     color: black;
     padding: 10px 20px 10px 20px;
-    margin: 0 0 15px 0;
+    margin: 15px;
     border-radius: 8px;
 
 }
@@ -59,8 +72,12 @@
 
 /* delete button for any mapped over item */
 .panelBoxItemDeleteBtn {
+    border: 1px solid black;
+    border-radius: 4px;
     font-size: smaller;
     float: right;
+    width: 20px;
+    height: 20px;
 }
 
 /* main text for any mapped over item */
@@ -82,17 +99,17 @@
 }
 
 .panelFormTextInput {
+    border: 1px solid black;
     border-radius: 3px;
 }
 
 .panelFormSubmit {
+    border: 1px solid black;
     border-radius: 5px;
     width: 25px;
-    height: 25px;
+    height: 30px;
 
-    display: flex;
-    align-content: center;
-    justify-content: center;
+    float: right;
 }
 
 
