--- a/client/src/components/Main/main.css
+++ b/client/src/components/Main/main.css
@@ -16,16 +16,28 @@
 .logoutBtn {
     font-weight: bold;
     background-color: #BCBDC0;
-    float: right;
-    color: black;
-    padding: 10px 20px 10px 20px;
-    margin: 15px;
+    border: 1px solid black;
     border-radius: 8px;
+    color: black;
 
+    float: right;
+    padding: 10px;
+    margin: 15px;
+    width: 100px;
+
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+.logoutBtn:hover {
+    border: 1px solid gray;
+    letter-spacing: -1px;
 }
 
 .row-1 {
-
+    display: flex;
+    justify-content: space-between;
 }
 
 .row-2 {
@@ -108,6 +120,11 @@
     border-radius: 3px;
 }
 
+.panelFormTextInput:focus {
+    border: 1px solid gray;
+    outline: none;
+}
+
 .panelFormSubmit {
     border: 1px solid black;
     border-radius: 5px;
@@ -115,6 +132,10 @@
     height: 30px;
 
     float: right;
+}
+
+.panelFormSubmit:hover {
+    border: 1px solid gray;
 }
 
 
