--- a/client/src/components/tasks/tasks.css
+++ b/client/src/components/tasks/tasks.css
@@ -7,18 +7,22 @@
     height: 200px;
 }
 
-.tasksTitle {
-}
-
-.taskItem {
-}
-
 .taskHeader {
     width: 100%;
     font-size: smaller;
 }
 
-.removeTaskBtn {
+.expandedTask {
+    overflow: hidden;
+}
+
+#toggle {
+    display: none;
+    visibility: hidden;
+}
+
+#toggle:checked ~ #expand {
+    height: 200px;
 }
 
 .taskForm {
@@ -30,7 +34,6 @@
 
     display: block;
 }
-
 
 .taskInput {
     display: block;
@@ -57,11 +60,4 @@
 .stepInputForm {
     display: flex;
     justify-content: space-between;
-}
-
-.stepInput {
-
-}
-
-.addStepBtn {
 }
