rearranged task items, hiding task steps for now

--- a/client/src/components/Main/main.css
+++ b/client/src/components/Main/main.css
@@ -98,6 +98,11 @@
     border: 1px solid gray;
 }
 
+.panelBoxItemDeleteBtn:focus {
+    border: 1px solid gray;
+    outline: none;
+}
+
 /* main text for any mapped over item */
 .panelBoxTitle {
     font-size: smaller;
@@ -141,6 +146,10 @@
 
 .panelFormSubmit:hover {
     border: 1px solid gray;
+}
+
+.panelFormSubmit:focus {
+    outline: none;
 }
 
 
