weather api functionality

--- a/client/src/pages/Main/main.css
+++ b/client/src/pages/Main/main.css
@@ -134,3 +134,10 @@
 .panelFormSubmit:focus {
     outline: none;
 }
+
+
+/* TIMER PANEL */
+.timerImg {
+    background-color: #734B5E;
+    width: 100%;
+}
