--- a/client/src/pages/Login/login.css
+++ b/client/src/pages/Login/login.css
@@ -10,4 +10,8 @@
 .googleBtn {
     height: 46px;
     width: 191px;
+
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 5px;
 }
