--- a/client/src/pages/Main/main.css
+++ b/client/src/pages/Main/main.css
@@ -1,11 +1,15 @@
-.logoutBtn {
+.headerRow {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.headerBtn {
     font-weight: bold;
     background-color: #BCBDC0;
     border: 1px solid black;
     border-radius: 8px;
     color: black;
 
-    float: right;
     padding: 10px;
     margin: 15px;
     width: 100px;
