fixing centering, delete buttons

--- a/client/src/pages/Main/center/center.css
+++ b/client/src/pages/Main/center/center.css
@@ -9,6 +9,10 @@
     justify-content: center;
 }
 
+h1 {
+    font-weight: bold;
+}
+
 .centerWeather {
     display: flex;
     justify-content: center;
